Make grid smaller, fix layout shift with squares
Fix layout shift by making the border the same width before and after
hover

--- a/styles.css
+++ b/styles.css
@@ -32,8 +32,8 @@ button:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 1200px;
-    height: 1200px;
+    width: 500px;
+    height: 500px;
 }
 
 .row {
@@ -43,10 +43,11 @@ button:hover {
 }
 
 .square {
-    border: solid, rgb(0, 140, 255), 1px;
+    border: solid, rgb(0, 140, 255), 2px;
     flex: 1;
     box-sizing: border-box;
     margin: 1px;
+    aspect-ratio: 1 / 1;
 }
 
 
@@ -54,4 +55,5 @@ button:hover {
     border: solid, rgb(0, 255, 21), 2px;
     box-shadow: 0 0 10px rgba(0, 255, 21, 1);
     background-color: rgb(0, 255, 21);
+    box-sizing: border-box;
 }
